# TiraLabra

./: .pylintrc  README.md  coverage.xml  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md  viikko7.md
src/: ai.py  game.py  main.py  menu.py
src/tests/: ai_test.py  game_test.py  main_test.py  menu_test.py
