[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Laura Peltonen <laura.peltonen53@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
invoke = "^2.2.0"
numpy = "^1.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pylint = "^2.17.4"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
